Updated Grid.java